@@ -1,6 +1,7 @@
 2006-10-02  Emmanuel Dreyfus  <manu@netbsd.org>
 	* src/racoon/socketmisc.c: don't use NULL pointer (Coverity)
 	* src/racoon/racoonctl.c: don't use NULL pointer (Coverity)
+	* src/racoon/proposal.c: don't use NULL pointer (Coverity)
 	
 2006-10-01  Emmanuel Dreyfus  <manu@netbsd.org>
 	* src/racoon/isakmp.c: Avoid using NULL pointer (Coverity)
